# ComputationalMathLab3

./: CMakeLists.txt
include/: methods.hpp
include/math/: binary_operation.hpp  constant.hpp  expression.hpp  parser.hpp  unary_operation.hpp  variable.hpp
include/math/functions/: abs.hpp  cos.hpp  divide.hpp  minus.hpp  multiply.hpp  natural_log.hpp  plus.hpp  power.hpp  sin.hpp  sqrt.hpp  tg.hpp  unary_minus.hpp  unary_plus.hpp
src/: main.cpp
src/math/: binary_operation.cpp  constant.cpp  unary_operation.cpp  variable.cpp
src/math/functions/: abs.cpp  cos.cpp  divide.cpp  minus.cpp  multiply.cpp  natural_log.cpp  plus.cpp  power.cpp  sin.cpp  sqrt.cpp  tg.cpp  unary_minus.cpp  unary_plus.cpp
